syntax="proto3";

import "common/common.proto";
option java_package="com.mrb.grpc.movie";
option java_multiple_files=true;

message MovieDto{
  string title=1;
  int32 year=2;
  double ratting=3;
}

message MovieSearchRequest{
    common.Genre genre=1;

}
message MovieSearchResponse {
  repeated MovieDto movie=1;
}

service MovieService{
  rpc getMovie(MovieSearchRequest) returns(MovieSearchResponse);
}
